--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         padding: 0;
         margin: 0;
         height: 100vh;
+        display: flex;
+        align-items: center;
       }
       div {
         width: 350px;
